--- a/fluentd/config/fluent.conf
+++ b/fluentd/config/fluent.conf
@@ -1,6 +1,8 @@
 # This source gets incoming logs over HTTP
 @include http-fluent.conf
 
-################################################################
 # Send all logs to elastic search
 #@include elastic-fluent.conf
+
+# Send all logs to S3 bucket
+@include s3-fluent.conf
