--- a/fluentd/config/http-fluent.conf
+++ b/fluentd/config/http-fluent.conf
@@ -6,7 +6,7 @@
   keepalive_timeout 10s
 </source>
 
-<filter **>
+<filter alice.log>
   @type record_transformer
   <record>
     host_param "#{Socket.gethostname}"
@@ -14,7 +14,7 @@
   </record>
 </filter>
 
-<match **>
-  @type file
-  path /output/http.log
-</match>
+# <match alice.log>
+#   @type file
+#   path /output/http.log
+# </match>
