--- a/fluentd/Dockerfile
+++ b/fluentd/Dockerfile
@@ -1,4 +1,5 @@
 FROM fluent/fluentd:v1.11-debian
 
 USER root
-RUN gem install fluent-plugin-elasticsearch
+RUN gem install fluent-plugin-elasticsearch --no-document
+RUN gem install fluent-plugin-s3 --no-document
