--- a/fluentd/Dockerfile
+++ b/fluentd/Dockerfile
@@ -1,5 +1,6 @@
 FROM fluent/fluentd:v1.11-debian
 
 USER root
-RUN gem install fluent-plugin-elasticsearch --no-document
-RUN gem install fluent-plugin-s3 --no-document
+# RUN gem install fluent-plugin-elasticsearch --no-document
+# RUN gem install fluent-plugin-s3 --no-document
+RUN gem install fluent-plugin-parser_cef
